--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,11 @@ dependencies = [
   "pyproj",
 ]
 
+[project.optional-dependencies]
+test = [
+  "pytest",
+]
+
 [project.urls]
 Documentation = "https://xproj.readthedocs.io"
 Repository = "https://github.com/benbovy/xproj"
