--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,11 @@ jobs:
       - name: Install xproj
         run: |
           python -m pip install -e .[test]
+          python -m pip install pytest-cov
 
       - name: Run tests
         run: |
-          python -m pytest
+          python -m pytest --cov=xproj
+
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v5
